tests/errors/runtime/multiple-drivers.futil
import "primitives/core.futil";
component main() -> () {
  cells {
    r = std_reg(32);
  }
  wires {
    group one {
      r.in = 32'd0;
      r.write_en = 1'd1;
      one[done] = r.done;
    }
    group two {
      r.in = 32'd2;
      r.write_en = 1'd1;
      two[done] = r.done;
    }
  }
  control {
    par { one; two; }
  }
}
